Add estimator back in

--- a/src/content/technotes/TN0045-router_resource_estimator.mdx
+++ b/src/content/technotes/TN0045-router_resource_estimator.mdx
@@ -13,3 +13,5 @@ How to use this estimator:
 3. Test and iterate!
 
 import RouterResourceEstimator from "../../components/TechNotes/RouterResourceEstimator";
+
+<RouterResourceEstimator />
