--- a/src/content/graphos/explorer/scripting.mdx
+++ b/src/content/graphos/explorer/scripting.mdx
@@ -7,7 +7,7 @@ description: Use preflight and operation scripts to manage authentication and va
 The GraphOS Explorer can run custom scripts when executing each GraphQL operation, similar to tools like Postman. These JavaScript-based scripts can populate the values of [environment variables](./connecting-authenticating/#environment-variables) that the Explorer then injects into HTTP header values or GraphQL variables. This can be useful for:
 
 - Managing authentication flows like OAuth, for example, by refreshing an expired access token
-- Validating response data and workflows that depend on response data
+- Validating workflows that depend on response data
 
 ## Script types
 
