Add "Fast mode" tip

--- a/src/content/graphos/metrics/operations.mdx
+++ b/src/content/graphos/metrics/operations.mdx
@@ -69,6 +69,12 @@ You can click an operation name to view more [detailed information](#operation-d
 
 You can adjust the overview's timeframe and filter by client in the top right corner or reset the defaults.
 
+<Tip>
+
+Use **Fast mode** to load metrics visualizations faster. This view excludes the last 24 hours of data for faster load times. In fast mode, you can view either the last month or last three months' data, excluding the past 24 hours.
+
+</Tip>
+
 <img
   src="../img/operations-overview-filters.jpg"
   className="screenshot"
