--- a/src/content/graphos/metrics/operations.mdx
+++ b/src/content/graphos/metrics/operations.mdx
@@ -71,7 +71,7 @@ You can adjust the overview's timeframe and filter by client in the top right co
 
 <Tip>
 
-Use **Fast mode** to load metrics visualizations faster. This view excludes the last 24 hours of data for faster load times. In fast mode, you can view either the last month or last three months' data, excluding the last 24 hours.
+Use **Fast Mode** to load metrics visualizations faster. This view excludes the last 24 hours of data for faster load times. In fast mode, you can view either the last month or last three months' data, excluding the last 24 hours.
 
 </Tip>
 
