--- a/src/content/shared/directive-composition-rules.mdx
+++ b/src/content/shared/directive-composition-rules.mdx
@@ -5,12 +5,11 @@
 
 <RuleExpansionPanel
   title="MERGED_NON_REPEATABLE_DIRECTIVE_ARGUMENTS"
-  whatItDoes="Checks if a non-[`repeatable`](https://spec.graphql.org/draft/#sel-GAHnBRVABeBoB_2T) directive has been applied to the schema element in different subgraphs with different arguments. In this case, arguments values are merged using [directive configured strategies](/apollo-server/schema/directives/#in-subgraphs)."
+  whatItDoes="Checks if a non-[`repeatable`](https://spec.graphql.org/draft/#sel-GAHnBRVABeBoB_2T) directive has been applied to the same schema element in different subgraphs with different arguments. [Learn more.](https://www.apollographql.com/docs/apollo-server/schema/directives/#in-subgraphs)"
   rationale="Arguments should be consistent across a non-[`repeatable`](https://spec.graphql.org/draft/#sel-GAHnBRVABeBoB_2T) directive's usage. If arguments differ, it may be a sign that subgraph owners need to communicate about the directive's usage. If the arguments _need_ to differ, consider using a [`repeatable`](https://spec.graphql.org/draft/#sel-GAHnBRVABeBoB_2T) directive."
 >
 
 The following example violates the rule:
-<br/>
 
 ```graphql title="❌ Subgraph A" disableCopy=true showLineNumbers=false
 type Product {
@@ -68,7 +67,6 @@ type Query {
 >
 
 The following example violates the rule:
-<br/>
 
 ```graphql title="❌ Subgraph A" disableCopy=true showLineNumbers=false
 directive @log(message: String!) on QUERY #highlight-line
@@ -96,12 +94,11 @@ directive @log(message: String!) on QUERY | FIELD
 
 <RuleExpansionPanel
   title="FROM_SUBGRAPH_DOES_NOT_EXIST"
-  whatItDoes="Checks that the source subgraph specified by [`@override`](/federation/federated-types/federated-directives/#override) directive exists."
-  rationale="The [`@override`](/federation/federated-types/federated-directives/#override) directive indicates that an object field is now resolved by a different subgraph. The directive can't work unless you specify an existing subgraph to resolve the field from."
+  whatItDoes="Checks that the source subgraph specified by [`@override`](https://www.apollographql.com/docs/federation/federated-types/federated-directives/#override) directive exists."
+  rationale="The [`@override`](https://www.apollographql.com/docs/federation/federated-types/federated-directives/#override) directive indicates that an object field is now resolved by a different subgraph. The directive can't work unless you specify an existing subgraph to resolve the field from."
 >
 
 The following example violates the rule:
-<br/>
 
 ```graphql title="❌ Subgraph A" disableCopy=true showLineNumbers=false {3}
 type Product @key(fields: "id") {
