--- a/src/content/shared/inconsistent-composition-rules.mdx
+++ b/src/content/shared/inconsistent-composition-rules.mdx
@@ -1,11 +1,11 @@
 
-These rules check for inconsistency in fields, types, arguments, etc. Inconsistency can cause issues for and often [break composition](https://www.apollographql.com/docs/federation/federated-types/composition).
+These rules identity inconsistencies in fields, types, arguments, etc across subgraphs. Such inconsistencies can disrupte or even break [composition](https://www.apollographql.com/docs/federation/federated-types/composition).
 
 #### Compatibility
 
-In some cases, the rules also check the **compatibility** of types. Two types are compatible if one is a non-nullable version, a list version, a subtype, or a combination of any of these of the other.
+In some cases, inconsistency rules also indicate the **compatibility** of checked types. Two types are compatible if one is a non-nullable version, a list version, a subtype, or a combination of any of these of the other.
 
-For example, the `price` fields in the subgraphs below are incompatible because they use different types (`Float` vs `String`):
+For example, the `price` fields in the example subgraphs below are inconsistent and incompatible because they use completely different types (`Float` vs `String`):
 
 <CodeColumns>
 
@@ -28,7 +28,7 @@ type Product {
 
 </CodeColumns>
 
-These `price` fields in the example schemas below are inconsistent but comptatible since both `Float`s but one is nullable and the other is the non-nullable list version of a `Float`.
+These `price` fields in the example subgraphs below are inconsistent but compatible since both use `Float`s, but one is nullable and the other is the non-nullable list of `Float`s.
 
 <CodeColumns>
 
@@ -53,12 +53,11 @@ type Product {
 
 <RuleExpansionPanel
   title="INCONSISTENT_ARGUMENT_PRESENCE"
-  whatItDoes="Checks that an optional argument of a field or directive definition is present in all subgraphs."
-  rationale="Unless an optional argument is in all subgraphs' definitions of a field or directive, it won't be part of the supergraph schema."
+  whatItDoes="Checks that an argument of a field or directive definition is present in all subgraphs."
+  rationale="The supergraph schema only includes arguments that are exactly the same for all subgraphs that define it its field or directive. [Learn more.](https://www.apollographql.com/docs/federation/federated-types/composition#input-types-and-field-arguments)"
 >
 
 The following example violates the rule:
-<br/>
 
 ```graphql title="❌ Subgraph A" disableCopy=true showLineNumbers=false
 type Product {
@@ -100,13 +99,13 @@ type Product {
 
 <RuleExpansionPanel
   title="INCONSISTENT_BUT_COMPATIBLE_ARGUMENT_TYPE"
-  whatItDoes="Checks that arguments (of a field, input field, or directive definition) have the exact same types in all subgraphs. This warning/error indicates the argument types are [compatible](#inconsistent-elements) but inconsistent."
-  rationale="Inconsistent types can lead to discrepancies in the way data is retrieved and processed. This can result in unexpected client behavior."
+  whatItDoes="Checks that arguments (of a field, input field, or directive definition) have the exact same types in all subgraphs. This warning/error indicates the argument types are [compatible](#compatibility) but inconsistent."
+  rationale="The supergraph schema only includes arguments that are exactly the same for all subgraphs that define it its field or directive. [Learn more.](https://www.apollographql.com/docs/federation/federated-types/composition#input-types-and-field-arguments)"
 >
 
 <br/>
 
-Because subgraph A's `price` field expects a non-nullable `Currency` argument type and subgraph B doesn't, the following example violates the rule:
+Because subgraph A's `price` field expects a non-nullable `Currency` argument type and subgraph B allows a nullable `Currency` argument type, the following example violates the rule:
 
 <br/>
 <br/>
@@ -195,13 +194,12 @@ enum Currency {
 
 <RuleExpansionPanel
   title="INCONSISTENT_BUT_COMPATIBLE_FIELD_TYPE"
-  whatItDoes="Checks that fields have the exact same types in all subgraphs. This warning/error indicates the field types are [compatible](#inconsistent-elements) but inconsistent."
-  rationale="Inconsistent types can lead to discrepancies in the way data is retrieved and processed. This can result in unexpected client behavior."
+  whatItDoes="Checks that fields have the exact same types in all subgraphs. This warning/error indicates the field types are [compatible](#compatibility) but inconsistent."
+  rationale="Inconsistent types can lead to discrepancies in the way data is retrieved and processed, resulting in unexpected client behavior."
 >
 
 <br/>
 The following example violates the rule:
-<br/>
 
 <CodeColumns>
 
@@ -308,11 +306,10 @@ enum Currency {
 <RuleExpansionPanel
   title="INCONSISTENT_DEFAULT_VALUE_PRESENCE"
   whatItDoes="Checks that argument definitions (of a field, input field, or directive definition) consistently include—or consistently don't include—a default value in all subgraphs that define the argument."
-  rationale="Inconsistent defaults can lead to discrepancies in the way data is retrieved and processed. This can result in unexpected client behavior."
+  rationale="Inconsistent defaults can lead to discrepancies in the way data is retrieved and processed, resulting in unexpected client behavior."
 >
 
 The following example violates the rule:
-<br/>
 
 <CodeColumns>
 
@@ -363,11 +360,10 @@ type Product {
 <RuleExpansionPanel
   title="INCONSISTENT_DESCRIPTION"
   whatItDoes="Checks that a type's description is consistent across subgraphs."
-  rationale="Inconsistent type descriptions can lead to inconsistent expectations around type values. This can result in unexpected client behavior."
+  rationale="Inconsistent type descriptions can lead to inconsistent expectations around type values resulting in unexpected client behavior."
 >
 
 The following example violates the rule:
-<br/>
 
 <CodeColumns>
 
@@ -423,12 +419,11 @@ type Product {
 
 <RuleExpansionPanel
   title="INCONSISTENT_ENTITY"
-  whatItDoes="Checks that an object is consistently declared as an entity (has a `@key`) in all subgraphs in which the object is defined."
+  whatItDoes="Checks that an object is consistently declared as an [entity](https://www.apollographql.com/docs/federation/entities) (has a `@key`) in all subgraphs in which the object is defined."
   rationale="If an object is only declared as an entity in some subgraphs, the federated schema won't have complete information about that entity."
 >
 
 The following example violates the rule:
-<br/>
 
 <CodeColumns>
 
@@ -475,11 +470,10 @@ type Product @key(fields: "id") { #highlight-line
 <RuleExpansionPanel
   title="INCONSISTENT_ENUM_VALUE_FOR_INPUT_ENUM"
   whatItDoes="Checks that values of an input enum type are consistently defined in all subgraphs that declare the enum."
-  rationale="When a value of an enum that is only used as an input type is defined in only some of the subgraphs that declare the enum, inconsistent values won't be merged into the supergraph."
+  rationale="When a value of an enum that is only used as an input type is defined in only some of the subgraphs that declare the enum, inconsistent values won't be merged into the supergraph. [Learn more.](https://www.apollographql.com/docs/federation/federated-types/composition#enums)"
 >
 
 The following example violates the rule:
-<br/>
 
 <CodeColumns>
 
@@ -549,13 +543,10 @@ input ProductInput {
 <RuleExpansionPanel
   title="INCONSISTENT_ENUM_VALUE_FOR_OUTPUT_ENUM"
   whatItDoes="Checks that values of an output enum type are consistently defined in all subgraphs that declare the enum."
-  rationale="When values of an output or unused enum type definition are inconsistent all values are merged into the supergraph."
+  rationale="When values of an output or unused enum type definition are inconsistent, all values are merged into the supergraph. Regardless, it can be helpful to set expectations by including all possible values in all subgraphs defining the enum. [Learn more.](https://www.apollographql.com/docs/federation/federated-types/composition#enums)"
 >
 
-Indicates that a 
-
 The following example violates the rule:
-<br/>
 
 <CodeColumns>
 
@@ -624,19 +615,18 @@ type Order {
 
 <RuleExpansionPanel
   title="INCONSISTENT_EXECUTABLE_DIRECTIVE_LOCATIONS"
-  whatItDoes="Checks that an executable directive definition is declared with consistent locations across subgraphs."
-  rationale="When inconsistent locations are declared across subgraphs, the supergraph schema uses the intersection of those locations. To ensure all locations are accessible, declare them consistently. [Learn more.](https://www.apollographql.com/docs/federation/federated-types/composition#executable-directives)"
+  whatItDoes="Checks that an executable directive definition is declared with consistent locations across all subgraphs."
+  rationale="An executable directive is composed into the supergraph schema only when it is defined identically in all subgraphs. [Learn more.](https://www.apollographql.com/docs/federation/federated-types/composition#executable-directives)"
 >
 
 The following example violates the rule:
-<br/>
 
 <CodeColumns>
 
 ```graphql title="❌ Subgraph A" disableCopy=true showLineNumbers=false
 directive @log(
   message: String!
-) on QUERY | FIELD  #highlight-line
+) on QUERY  #highlight-line
 ```
 
 ```graphql title="❌ Subgraph B" disableCopy=true showLineNumbers=false
@@ -676,7 +666,6 @@ directive @log(
 >
 
 The following example violates the rule:
-<br/>
 
 <CodeColumns>
 
@@ -716,12 +705,11 @@ directive @modify(
 
 <RuleExpansionPanel
   title="INCONSISTENT_EXECUTABLE_DIRECTIVE_REPEATABLE"
-  whatItDoes="Checks that an executable directive definition is marked repeatable in all subgraphs that define it."
-  rationale="Unless an executable directive is defined as repeatable in all subgraphs, it won't be repeatable in the supergraph."
+  whatItDoes="Checks that an executable directive definition is marked `repeatable` in all subgraphs that define it."
+  rationale="Unless an executable directive is defined as `repeatable` in all subgraphs, it won't be `repeatable` in the supergraph."
 >
 
 The following example violates the rule:
-<br/>
 
 <CodeColumns>
 
@@ -764,12 +752,11 @@ directive @validateLength(
 
 <RuleExpansionPanel
   title="INCONSISTENT_INPUT_OBJECT_FIELD"
-  whatItDoes="Checks that a field of an input object type definition is defined in all the subgraphs that declare the input object."
-  rationale="The supergraph schema includes only the input object type fields that all subgraphs define for the object. [Learn more.](https://www.apollographql.com/docs/federation/federated-types/composition#input-types-and-field-arguments)"
+  whatItDoes="Checks that a field of an input object definition is defined in all the subgraphs that declare the input object."
+  rationale="The supergraph schema includes only the input object fields that all subgraphs define for the object. [Learn more.](https://www.apollographql.com/docs/federation/federated-types/composition#input-types-and-field-arguments)"
 >
 
 The following example violates the rule:
-<br/>
 
 <CodeColumns>
 
@@ -830,12 +817,11 @@ input OrderInput {
 
 <RuleExpansionPanel
   title="INCONSISTENT_INTERFACE_VALUE_TYPE_FIELD"
-  whatItDoes="Checks that that a field of an interface 'value type' (has no `@key` in any subgraph) is defined in all the subgraphs that declare the type."
+  whatItDoes="Checks that that a field of an interface [value type](https://www.apollographql.com/docs/federation/federated-types/sharing-types) (has no `@key` in any subgraph) is defined in all the subgraphs that declare the type."
   rationale="If different subgraphs contribute different fields to an interface type, any object types that implement that interface must define all contributed fields from all subgraphs. Otherwise, composition fails. [Learn more.](https://www.apollographql.com/docs/federation/federated-types/composition#object-union-and-interface-types)"
 >
 
 The following example violates the rule:
-<br/>
 
 ```graphql title="❌ Subgraph A" disableCopy=true showLineNumbers=false
 interface Product {
@@ -852,11 +838,11 @@ type DigitalProduct implements Product {
 }
 ```
 
-```graphql title="❌ Subgraph B" disableCopy=true showLineNumbers=false
+```graphql title="❌ Subgraph B" disableCopy=true showLineNumbers=false {4}
 interface Product {
   id: ID!
   name: String
-  # cost is not defined in the interface
+  # cost is not defined in the interface 
 }
 
 type PhysicalProduct implements Product {
@@ -906,12 +892,11 @@ type PhysicalProduct implements Product {
 
 <RuleExpansionPanel
   title="INCONSISTENT_NON_REPEATABLE_DIRECTIVE_ARGUMENTS"
-  whatItDoes="Checks if a non-repeatable directive is applied to a schema element across different subgraphs with differing arguments."
+  whatItDoes="Checks if a non-`repeatable` directive is applied to a schema element across different subgraphs with differing arguments."
   rationale="Inconsistent directive argument usage can lead to misunderstandings and potential issues in client applications."
 >
 
 The following example violates the rule:
-<br/>
 
 ```graphql title="❌ Subgraph A" disableCopy=true showLineNumbers=false
 type Product {
@@ -965,12 +950,11 @@ type Query {
 
 <RuleExpansionPanel
   title="INCONSISTENT_OBJECT_VALUE_TYPE_FIELD"
-  whatItDoes="Checks that the same fields are declared for all object 'value types' (has no `@key` in any subgraph) in all subgraphs that declare the type."
+  whatItDoes="Checks that the same fields are declared for all object [value type](https://www.apollographql.com/docs/federation/federated-types/sharing-types) (has no `@key` in any subgraph) in all subgraphs that declare the type."
   rationale="To-do—seems at odds with https://www.apollographql.com/docs/federation/federated-types/sharing-types#sharing-object-types"
 >
 
 The following example violates the rule:
-<br/>
 
 <CodeColumns>
 
@@ -1025,7 +1009,6 @@ type Product {
 >
 
 The following example violates the rule:
-<br/>
 
 <CodeColumns>
 
@@ -1096,7 +1079,6 @@ type Details {
 >
 
 The following example violates the rule:
-<br/>
 
 <CodeColumns>
 
@@ -1138,12 +1120,11 @@ directive @customDirective(
 
 <RuleExpansionPanel
   title="INCONSISTENT_TYPE_SYSTEM_DIRECTIVE_REPEATABLE"
-  whatItDoes="Checks that a type system directive definition is marked `repeatable` in all subgraphs that declare the directive and will be repeatable in the supergraph."
+  whatItDoes="Checks that a type system directive definition is marked `repeatable` in all subgraphs that declare the directive and will be `repeatable` in the supergraph."
   rationale="To ensure consistent expectations, directives should have consistent definitions across subgraphs, including whether they are `repeatable`. [Learn more.](https://www.apollographql.com/docs/federation/federated-types/composition#type-system-directives)"
 >
 
 The following example violates the rule:
-<br/>
 
 ```graphql title="❌ Subgraph A" disableCopy=true showLineNumbers=false
 directive @customDirective on OBJECT
@@ -1169,12 +1150,11 @@ directive @customDirective repeatable on OBJECT
 
 <RuleExpansionPanel
   title="INCONSISTENT_UNION_MEMBER"
-  whatItDoes="Checks that a member of a union type definition is defined in all subgraphs that declare the union."
-  rationale="When a union type definition has inconsistent members, the supergraph schema uses the union of all those members. Nevertheless, to ensure consistent expectations, it's best that all union type definitions declare the same member. [Learn more.](https://www.apollographql.com/docs/federation/federated-types/composition#object-union-and-interface-types)"
+  whatItDoes="Checks that a member of a union definition is defined in all subgraphs that declare the union."
+  rationale="When a union definition has inconsistent members, the supergraph schema includes all members in the union definition. Nevertheless, to ensure consistent expectations, it's best that all union definitions declare the same members across subgraphs. [Learn more.](https://www.apollographql.com/docs/federation/federated-types/composition#object-union-and-interface-types)"
 >
 
 The following example violates the rule:
-<br/>
 
 ```graphql title="❌ Subgraph A" disableCopy=true showLineNumbers=false
 type Product {
